--- a/.eslintrc
+++ b/.eslintrc
@@ -3,22 +3,17 @@
   "env": {
     "browser": true,
     "node": true,
-    "es6": true
+    "es2020": true
   },
   "plugins": [
-    "react",
     "babel"
   ],
   "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
     "allowAwaitOutsideFunction": true,
     "ecmaVersion": 2019,
     "sourceType": "module"
   },
   "rules": {
-    "react/jsx-no-undef": ["warn", { "allowGlobals": true }],
     "new-cap": ["error", { "newIsCap": false, "capIsNew": false }],
     "object-shorthand": ["error"],
     "quote-props": ["error", "as-needed"],
@@ -93,32 +88,6 @@
     "no-process-exit": 0,
     "no-shadow": 0,
     "consistent-return": 0,
-    "eol-last": 0,
-    "react/display-name": 0,
-    "react/jsx-boolean-value": 0,
-    "react/jsx-curly-spacing": 0,
-    "react/jsx-no-duplicate-props": 0,
-    "react/jsx-sort-prop-types": 0,
-    "react/jsx-sort-props": 0,
-    "react/jsx-uses-react": 2,
-    "react/jsx-uses-vars": 2,
-    "react/no-danger": 0,
-    "react/no-did-update-set-state": 2,
-    "react/no-multi-comp": 0,
-    "react/no-unknown-property": 2,
-    "react/prop-types": 0,
-    "react/react-in-jsx-scope": 2,
-    "react/require-extension": 0,
-    "react/self-closing-comp": 2,
-    "react/sort-comp": [2, {
-      "order": [
-        "lifecycle",
-        "/^on.+$/",
-        "/^(get|set)(?!(InitialState$|DefaultProps$|ChildContext$)).+$/",
-        "everything-else",
-        "/^render.+$/",
-        "render"
-      ]
-    }]
+    "eol-last": 0
   }
 }
