--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test:dom": "node -r esm test/useStore.test | tap-spec",
     "test": "npm run test:js",
     "debug": "node -r esm --inspect-brk=1234 test",
-    "benchmark": "node -r esm benchmark"
+    "benchmark": "node -r esm benchmark",
+    "benchmark:compare": "node -r esm benchmark/compare",
+    "debug:benchmark:compare": "node -r esm --inspect-brk=1234 benchmark/compare"
   },
   "engines": {
     "node": "^13.9.0",
@@ -54,12 +56,14 @@
     "babel-eslint": "^10.0.3",
     "baobab": "^2.6.0",
     "benchloop": "^1.3.1",
+    "benchmark": "^2.1.4",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
     "eslint-plugin-babel": "^5.3.0",
     "esm": "^3.2.25",
     "jsdom": "^16.2.0",
+    "microtime": "^3.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "tap-spec": "^5.0.0",
