--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "node -r esm test | tap-spec",
     "debug": "node -r esm --inspect-brk=1234 test",
-    "benchmark": "node -r esm benchmark",
+    "benchmark": "node -r esm benchmark/benchmark",
     "compare": "node -r esm benchmark/compare",
     "debug:compare": "node -r esm --inspect-brk=1234 benchmark/compare"
   },
@@ -52,7 +52,6 @@
     "@fabiospampinato/store": "^1.1.1",
     "babel-eslint": "^10.0.3",
     "baobab": "^2.6.0",
-    "benchloop": "^1.3.1",
     "benchmark": "^2.1.4",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
