--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "license": "MIT",
   "author": {
     "name": "Immutable, LLC",
-    "email": "joe@weareimmutable.com"
+    "email": "contact@weareimmutable.com"
   },
   "repository": {
     "type": "git",
@@ -40,16 +40,11 @@
     "proxy"
   ],
   "dependencies": {
-    "deep-equal": "^2.0.1",
     "deep-object-diff": "^1.1.0",
-    "is-primitive": "^3.0.1",
-    "lodash.isequal": "^4.5.0",
-    "plain-object-is-empty": "^1.0.0",
-    "proxy-watcher": "^1.2.1",
     "signal-js": "^2.3.2"
   },
   "peerDependencies": {
-    "react": ">=16.6.0"
+    "react": ">=16.12.0"
   },
   "devDependencies": {
     "@fabiospampinato/store": "^1.1.1",
