--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "description": "a simple, modern state management library",
   "version": "0.0.1",
   "main": "store.js",
+  "module": "./src/index.js",
   "scripts": {
     "test": "node -r esm test | tap-spec",
-    "debug": "node -r esm --inspect-brk=1234 test",
+    "debug": "node -r esm --inspect-brk=1234 store",
     "bench:mark": "node -r esm benchmark/benchmark",
     "bench:compare": "node -r esm benchmark/compare",
     "bench:micro": "node -r esm benchmark/micro",
-    "debug:compare": "node -r esm --inspect-brk=1234 benchmark/compare",
-    "build": "webpack"
+    "build": "rollup --config"
   },
   "engines": {
     "node": "^13.9.0",
@@ -48,11 +48,8 @@
     "react": ">=16.13.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
     "@fabiospampinato/store": "^1.1.1",
     "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.6",
     "baobab": "^2.6.0",
     "benchmark": "^2.1.4",
     "enzyme": "^3.11.0",
@@ -62,12 +59,12 @@
     "esm": "^3.2.25",
     "jsdom": "^16.2.0",
     "microtime": "^3.0.0",
-    "plain-object-is-empty": "^1.0.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "rollup": "^1.32.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "tap-spec": "^5.0.0",
-    "tape": "^4.9.0",
-    "webpack": "^5.0.0-beta.14",
-    "webpack-cli": "^3.3.6"
+    "tape": "^4.9.0"
   }
 }
