--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
   ],
   "dependencies": {
     "deep-object-diff": "^1.1.0",
-    "lodash.clonedeepwith": "^4.5.0"
+    "lodash.clonedeepwith": "^4.5.0",
+    "plain-object-is-empty": "^1.0.0"
   },
   "peerDependencies": {
     "react": ">=16.13.0"
