--- a/package.json
+++ b/package.json
@@ -48,11 +48,7 @@
     "clean",
     "proxy"
   ],
-  "dependencies": {
-    "deep-object-diff": "^1.1.0",
-    "lodash.clonedeepwith": "^4.5.0",
-    "plain-object-is-empty": "^1.0.0"
-  },
+  "dependencies": {},
   "peerDependencies": {
     "react": ">=16.13.0"
   },
@@ -61,12 +57,14 @@
     "babel-eslint": "^10.0.3",
     "baobab": "^2.6.0",
     "benchmark": "^2.1.4",
+    "deep-object-diff": "^1.1.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
     "eslint-plugin-babel": "^5.3.0",
     "esm": "^3.2.25",
     "jsdom": "^16.2.0",
+    "lodash.clonedeepwith": "^4.5.0",
     "microtime": "^3.0.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
@@ -75,6 +73,7 @@
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-gzip": "^2.3.0",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-terser": "^6.1.0",
     "tap-spec": "^5.0.0",
     "tape": "^4.9.0"
   }
