--- a/package.json
+++ b/package.json
@@ -73,5 +73,7 @@
     "rollup-plugin-terser": "^6.1.0",
     "tap-spec": "^5.0.0",
     "tape": "^4.9.0"
+  "dependencies": {
+    "@immutabl3/utils": "^1.1.0"
   }
 }
