--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
     "eslint-plugin-babel": "^5.3.0",
-    "esm": "^3.2.25",
+    "jest": "^27.4.5",
     "jsdom": "^16.2.0",
     "lodash.clonedeepwith": "^4.5.0",
     "microtime": "^3.0.0",
