--- a/package.json
+++ b/package.json
@@ -57,12 +57,11 @@
     "baobab": "^2.6.0",
     "benchmark": "^2.1.4",
     "deep-object-diff": "^1.1.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
+    "eslint": "^8.5.0",
     "eslint": "^6.8.0",
     "eslint-plugin-babel": "^5.3.0",
     "jest": "^27.4.5",
-    "jsdom": "^16.2.0",
+    "lodash": "^4.17.21",
     "lodash.clonedeepwith": "^4.5.0",
     "microtime": "^3.0.0",
     "react": "^16.13.0",
