--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "lodash": "^4.17.21",
     "lodash.clonedeepwith": "^4.5.0",
     "react": "^18.0.0-rc.0",
-    "react": "^16.13.0",
+    "react-dom": "^18.0.0-rc.0",
     "rollup": "^2.61.1",
     "rollup-plugin-babel-minify": "^10.0.0",
     "rollup-plugin-commonjs": "^10.1.0",
