--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@immutabl3/store",
   "description": "a simple, modern state management library",
-  "version": "1.2.2",
+  "version": "1.3.0",
   "type": "module",
   "sideEffects": false,
   "main": "src/index.js",
@@ -46,32 +46,31 @@
     "proxy"
   ],
   "peerDependencies": {
-    "react": ">=16.13.0"
+    "react": ">=18.0.0"
   },
   "devDependencies": {
-    "@fabiospampinato/store": "^1.1.1",
-    "@jest/globals": "^27.4.4",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^13.0.0-alpha.5",
-    "babel-eslint": "^10.0.3",
+    "@babel/eslint-parser": "^7.17.0",
+    "@fabiospampinato/store": "^1.10.5",
+    "@jest/globals": "^27.5.1",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.0.1",
     "baobab": "^2.6.0",
     "benchmark": "^2.1.4",
-    "deep-object-diff": "^1.1.0",
-    "eslint": "^8.5.0",
-    "eslint-plugin-babel": "^5.3.0",
-    "jest": "^27.4.5",
+    "deep-object-diff": "^1.1.7",
+    "eslint": "^8.13.0",
+    "jest": "^27.5.1",
     "lodash": "^4.17.21",
     "lodash.clonedeepwith": "^4.5.0",
-    "react": "^18.0.0-rc.0",
-    "react-dom": "^18.0.0-rc.0",
-    "rollup": "^2.61.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "rollup": "^2.70.1",
     "rollup-plugin-babel-minify": "^10.0.0",
     "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-gzip": "^3.0.0",
+    "rollup-plugin-gzip": "^3.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^7.0.2",
     "tap-spec": "^5.0.0",
-    "tape": "^5.3.2"
+    "tape": "^5.5.3"
   },
   "dependencies": {
     "@immutabl3/utils": "^1.1.0"
